--- a/admindashboard.html
+++ b/admindashboard.html
@@ -192,8 +192,8 @@ const pages = {
     </tbody>
   </table>
 
-  <div style="display:flex;gap:2rem;margin-top:1rem;align-items:flex-start;">
-    <canvas id="pieChart" width="300" height="30"></canvas>
+ <div style="display:flex;gap:2rem;margin-top:1rem;align-items:flex-start;">
+  <canvas id="pieChart" style="width:200px !important;height:200px;"></canvas>
 
     <div class="card-container" style="display:flex;gap:1rem;flex-wrap:wrap;">
       <div class="card" onclick="openDataModal('Takoyaki store')">
