--- a/admindashboard.html
+++ b/admindashboard.html
@@ -193,6 +193,7 @@ const pages = {
   </table>
 
  <div style="display:flex;gap:2rem;margin-top:1rem;align-items:flex-start;">
+ <div style="flex:0 0 auto;">
   <canvas id="pieChart" style="width:200px !important;height:200px;"></canvas>
 
     <div class="card-container" style="display:flex;gap:1rem;flex-wrap:wrap;">
