--- a/admindashboard.html
+++ b/admindashboard.html
@@ -208,7 +208,7 @@ const pages = {
     
    
     <div style="flex:0 0 auto;">
-      <canvas id="pieChart" width="180" height="180"></canvas>
+      <canvas id="pieChart" style="width:300px;height:300px;"></canvas>
     </div>
 
 
@@ -328,12 +328,18 @@ function initCommodity(){
   const ctx = document.getElementById('pieChart');
   if(!ctx) return;
 
-  let pieChart = new Chart(ctx, {
+  pieChart = new Chart(ctx, {
     type: 'pie',
     data: getPieData(),
+    options: {
+      responsive: false,
+      plugins: {
+        legend: { position: 'bottom' }
+      }
+    }
   });
 
-
+ 
   document.querySelectorAll('#commodityTable td').forEach(cell => {
     cell.addEventListener('input', () => {
       pieChart.data = getPieData();
@@ -343,7 +349,8 @@ function initCommodity(){
 }
 
 function getPieData() {
-  const statuses = Array.from(document.querySelectorAll('#commodityTable tbody tr td:nth-child(4)')).map(td => td.innerText.trim());
+  const statuses = Array.from(document.querySelectorAll('#commodityTable tbody tr td:nth-child(4)'))
+                        .map(td => td.innerText.trim());
   let counts = { High: 0, Low: 0, Stable: 0 };
   statuses.forEach(status => { if (counts[status] !== undefined) counts[status]++; });
   return {
@@ -355,40 +362,46 @@ function getPieData() {
   };
 }
 
+
 function openDataModal(businessName) {
   document.getElementById('modalTitle').innerText = businessName + ' - Past 6 Months';
   document.getElementById('dataModal').style.display = 'flex';
 
   const ctxLine = document.getElementById('lineChart').getContext('2d');
-  if (window.lineChart) window.lineChart.destroy();
+  if (lineChart) lineChart.destroy();
 
+  
   let row = [...document.querySelectorAll('#commodityTable tbody tr')]
               .find(r => r.cells[0].innerText.trim() === businessName);
 
   let prev = row ? parseFloat(row.cells[1].innerText) || 0 : 0;
   let curr = row ? parseFloat(row.cells[2].innerText) || 0 : 0;
 
-  let pipeline = [prev - 5, prev, (prev + curr) / 2, curr];
+  
+  const exampleLabels = ["Jan","Feb","Mar","Apr","May","Jun"];
+  const exampleData = [prev, prev+((curr-prev)/5), prev+((curr-prev)/3), (prev+curr)/2, curr-((curr-prev)/5), curr];
 
-  window.lineChart = new Chart(ctxLine, {
-    type: 'line',
+  lineChart = new Chart(ctxLine, {
+    type: "line",
     data: {
-      labels: ['Month 1', 'Month 2', 'Month 3', 'Month 4'],
+      labels: exampleLabels,
       datasets: [{
-        label: businessName + ' Price Trend',
-        data: pipeline,
-        borderColor: '#000',
-        backgroundColor: 'rgba(0,0,0,0.1)',
-        fill: true,
-        tension: 0.3
+        label: businessName + " Prices",
+        data: exampleData,
+        borderColor: "black",
+        backgroundColor: "rgba(0,0,0,0.1)",
+        fill: false,
+        tension: 0.2
       }]
     }
   });
 }
 
+
 function closeDataModal() {
-  document.getElementById('dataModal').style.display = 'none';
+  document.getElementById("dataModal").style.display = "none";
 }
+
   
 function initReports(refNo){
   const ctx=document.getElementById("vendorChart");
