--- a/admindashboard.html
+++ b/admindashboard.html
@@ -467,12 +467,16 @@ function initReports(refNo){
 }
   
 function renderPage(page, refNo=null){
-  contentArea.innerHTML=pages[page]||`<h1>${page}</h1>`;
-  if(page==="dashboard") initDashboard();
-  if(page==="Vendor") makeTableEditable("vendorTable","vendorSearch");
-  if(page==="Supply"){ makeTableEditable("supplyTable","supplySearch"); attachRefLinks(); }
-  if(page==="Reports") initReports(refNo);
-  if(page==="Commodity") {initCommodity(); 
+  contentArea.innerHTML = pages[page] || `<h1>${page}</h1>`;
+  if(page === "dashboard") initDashboard();
+  if(page === "Vendor") makeTableEditable("vendorTable","vendorSearch");
+  if(page === "Supply") { 
+    makeTableEditable("supplyTable","supplySearch"); 
+    attachRefLinks(); 
+  }
+  if(page === "Reports") initReports(refNo);
+  if(page === "Commodity") { 
+    initCommodity(); 
 }
 
 document.querySelectorAll(".nav-item").forEach(link=>{
