--- a/admindashboard.html
+++ b/admindashboard.html
@@ -224,13 +224,12 @@ Commodity: `
         Tables and chairs<br>
         <button class="view-btn">View Data</button>
       </div>
-      <div class="card" onclick="openDataModal('Atan\'s Meat Shop')">
+      <div class="card" onclick="openDataModal('Atan's Meat Shop')">
         Atan's Meat Shop<br>
         <button class="view-btn">View Data</button>
       </div>
     </div>
   </div>
-
   
   <div id="dataModal" class="overlay" style="display:none;justify-content:center;align-items:center;">
     <div class="modal" style="background:#fff;padding:1rem;border-radius:8px;max-width:600px;width:90%;">
